@@ -7,6 +7,10 @@
   <version>1.0.0-SNAPSHOT</version>
   <name>rustheaders</name>
   <url>http://maven.apache.org</url>
+
+  <properties>
+        <maven.compiler.release>17</maven.compiler.release>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -15,4 +19,20 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <release>${maven.compiler.release}</release>
+                    <compilerArgs>
+            <arg>--add-modules</arg>
+            <arg>jdk.incubator.foreign</arg>
+          </compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+  </build>
 </project>
